--- a/_data/locales/en.yml
+++ b/_data/locales/en.yml
@@ -10,7 +10,8 @@ layout:
 # The tabs of sidebar
 tabs:
   # format: <filename_without_extension>: <value>
-  home: Home
+  home: About Us
+  posts: Posts
   categories: Categories
   tags: Tags
   archives: Archives
